Remove GardenID from Plant struct
